Fix search result title alignment for small mobile devices

--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -126,15 +126,13 @@ div#tipue_search_content {
     // Align the items for display
     
     & > div.tipue_search_content_title {
-        /*
         & > span,
         & > span + a {
+            // Using table-cell aligns the title on the left even if long titles wrap
             display: table-cell;
         }
-        */
         
         & > span {
-            display: inline-block;
             // Aligned up to six digits
             min-width: 50px;
             font-size: $font_size_hub_default_excerpt + 1;
@@ -148,7 +146,7 @@ div#tipue_search_content {
             // Overrides previous setting: block
             display: inline-block;
             margin: 0;
-            padding-left: 40px;
+            padding-left: 50px;
         }
     }
     
